Update PostgreSQL configuration in application.properties for production environment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,12 @@
-spring.application.name=expense-tracker
+# PostgreSQL configuration
+spring.datasource.url=jdbc:postgresql://dpg-d11kldnfte5s739b6ns0-a.oregon-postgres.render.com:5432/expenso_db_87e2
+spring.datasource.username=aditya
+spring.datasource.password=TphnKCCXwNvHGIG5aYha57yvYpQ0En1v
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/expense_tracker_db
-spring.datasource.username=postgres
-spring.datasource.password=1234
-
+# JPA & Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# Server port (optional)
 server.port=8080
