Add JAXB dependencies for Java 8 and Java 11 compatibility

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,27 @@
 			<version>0.9.1</version>
 		</dependency>
 
+		<!-- JAXB dependency Spring Security -->
+		<!-- ✅ JAXB API (Required for Java 8) -->
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
+		</dependency>
+
+		<!-- ✅ JAXB API (Required for Java 11+) -->
+		<dependency>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+			<version>2.3.3</version>
+		</dependency>
+
+		<!-- ✅ JAXB Runtime Implementation -->
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.3.3</version>
+		</dependency>
 
 		<!-- Spring Boot DevTools (Optional) -->
 		<dependency>
