--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
  
-    <parent>
+    <!-- Parent POM -->
+		<parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.5</version> <!-- ✅ stable version with full annotation support -->
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
  
-    <groupId>com.expenso</groupId>
+    <!-- Project Information -->
+		<groupId>com.expenso</groupId>
     <artifactId>expense-tracker</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>expense-tracker</name>
@@ -21,12 +23,15 @@
     </properties>
  
     <dependencies>
+
         <!-- Spring Boot Starters -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
+
+        <!-- Spring Boot Starter Security -->
+				<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
@@ -52,15 +57,17 @@
             <artifactId>jjwt-api</artifactId>
             <version>0.12.6</version>
         </dependency>
-				
-        <dependency>
+
+        <!-- JJWT Implementation for JSON processing -->
+				<dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-impl</artifactId>
             <version>0.12.6</version>
             <scope>runtime</scope>
         </dependency>
 
-        <dependency>
+        <!-- JJWT Jackson for JSON processing -->
+				<dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt-jackson</artifactId>
             <version>0.12.6</version>
