--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.5</version> <!-- ✅ stable version with full annotation support -->
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>3.2.5</version>
+        <relativePath/>
     </parent>
  
     <!-- Project Information -->
