--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # PostgreSQL configuration
-spring.datasource.url=jdbc:postgresql://dpg-d11kldnfte5s739b6ns0-a.oregon-postgres.render.com:5432/expenso_db_87e2
+
+spring.datasource.url=jdbc:postgresql://neondb_owner:npg_2K7nEzLSkrGc@ep-lucky-boat-a10sp9gs-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 spring.datasource.username=aditya
 spring.datasource.password=TphnKCCXwNvHGIG5aYha57yvYpQ0En1v
 
