--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
-# PostgreSQL configuration
+# PostgreSQL configuration (NEON DB)
+spring.datasource.url=jdbc:postgresql://ep-lucky-boat-a10sp9gs-pooler.ap-southeast-1.aws.neon.tech:5432/neondb?sslmode=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_jEz3pufYwZD0
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:postgresql://neondb_owner:npg_2K7nEzLSkrGc@ep-lucky-boat-a10sp9gs-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
-spring.datasource.username=aditya
-spring.datasource.password=TphnKCCXwNvHGIG5aYha57yvYpQ0En1v
-
-# JPA & Hibernate
+# Hibernate & JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Server port (optional)
 server.port=8080
-# Logging configuration
